<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GameActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tvMessage">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:id="@+id/tvWelcome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/welcome"
                android:textSize="@dimen/tv_font_size_2" />

            <TextView
                android:id="@+id/tvPlayer1Name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/tv_font_size_2" />

            <TextView
                android:id="@+id/tvPlayer1PlaysWith"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/plays_with"
                android:textSize="@dimen/tv_font_size_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="vertical"
                android:paddingStart="20sp"
                android:paddingEnd="20sp"
                android:weightSum="3">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:weightSum="3"
                    android:layout_marginBottom="-12sp">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile00"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="00"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile01"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="01"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile02"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="02"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginBottom="-12sp"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile10"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="10"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile11"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="11"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile12"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="12"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:weightSum="3">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile20"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="20"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile21"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="21"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1">

                        <Button
                            android:id="@+id/tile22"
                            android:layout_width="0dp"
                            android:layout_height="0dp"
                            android:backgroundTint="@color/tile_background"
                            android:onClick="clickTile"
                            android:tag="22"
                            android:textColor="@color/black"
                            android:textSize="@dimen/tile_size"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintDimensionRatio="1:1"
                            app:layout_constraintLeft_toLeftOf="parent"
                            app:layout_constraintRight_toRightOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />

                    </androidx.constraintlayout.widget.ConstraintLayout>

                </LinearLayout>

            </LinearLayout>

            <TextView
                android:id="@+id/tvTurnOf"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="@string/turn_of"
                android:textSize="@dimen/tv_font_size_2" />

            <TextView
                android:id="@+id/tvTurnOfName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="@dimen/tv_font_size_2" />

            <Button
                android:id="@+id/bBegin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_marginTop="10dp"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:minHeight="40dip"
                android:onClick="restartGame"
                android:text="@string/restart"
                app:cornerRadius="0dp" />
        </LinearLayout>
    </ScrollView>

    <TextView
        android:id="@+id/tvMessage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:insetTop="0dp"
        android:insetBottom="0dp"
        android:minHeight="50dip"
        android:textSize="@dimen/tv_font_size" />

</RelativeLayout>